add category with crud

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,17 @@
   max-width: 450px;
   margin: auto;
 }
+.active {
+  background: green;
+  color: white;
+  padding: 0.3rem 0.8rem;
+  border-radius: 5px;
+  text-transform: capitalize;
+}
+.inactive {
+  background: red;
+  color: white;
+  padding: 0.3rem 0.8rem;
+  border-radius: 5px;
+  text-transform: capitalize;
+}
