--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   box-sizing: border-box;
-}
+} */
 
 .main {
   min-height: calc(100vh - 170px);
@@ -11,6 +11,7 @@
   max-width: 450px;
   margin: auto;
 }
+
 .active {
   background: green;
   color: white;
@@ -18,6 +19,7 @@
   border-radius: 5px;
   text-transform: capitalize;
 }
+
 .inactive {
   background: red;
   color: white;
@@ -26,9 +28,20 @@
   text-transform: capitalize;
 }
 /* ---------------------- */
-
-/* Add this CSS code to your stylesheet or style section */
-.carousel {
-  box-shadow: none !important;
-  outline: none !important;
+/* for carousel background */
+.main-home .home-carousel .carousel .carousel-inner .carousel-item {
+  background: none;
+  padding: 0;
+  margin: 0;
+  /* background-size: cover; */
 }
+.main-home {
+  min-height: calc(100vh - 170px);
+}
+.main-home .home-carousel .carousel .carousel-inner .carousel-item .d-block {
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+}
+/* ------------------- */
