--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -1,10 +1,10 @@
-/* .home-page {
+.home-page {
   text-align: center;
-  padding-top: 10px;
+  padding-top: 100px;
 }
 
 .hero {
-  margin-bottom: 40px;
+  margin-bottom: 100px;
 }
 
 .hero h1 {
@@ -68,4 +68,4 @@
   100% {
     transform: translateY(0);
   }
-} */
+}
