--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,11 @@
   height: 93vh !important;
   /* background-size: cover; */
 }
-.main-home {
+.main-home,
+.main-login {
+  min-height: calc(100vh - 170px);
+}
+.main-login {
   min-height: calc(100vh - 170px);
 }
 .carousel .carousel-inner .carousel-item .d-block {
